# libmycrypto

./: .gitignore  CMakeLists.txt  README.md  base32.c  base32.h  base58.c  base58.h  base64.c  base64.h  hashtest.c  hmac-sha256.c  hmac-sha256.h  hmac.c  hmac.h  misc.c  misc.cpp  misc.h  my-sha256.c  ripemd160.c  ripemd160.h  rmd160.c  rmd160.h  sha1.c  sha1.h  sha256.c  sha256.h  utils.cpp  utils.h
.cache/clangd/index/: base32.c.BF23C4D538B6ECBA.idx  base32.h.E73689EFAA0919F6.idx  base58.c.FD86C6843A7FC065.idx  base58.h.BBF6D7DC036DC50B.idx  base64-decode.c.CF4594868679A874.idx  base64-encode.c.D3A3C1BCAFB82843.idx  base64.c.F613CE8686BD0BC6.idx  base64.h.29221E5D3C422449.idx  fuzz-base.c.F17BBAE51475C3B8.idx  hmac.c.38A1DA07DF7774CD.idx  hmac.h.BA378F0AC0EC019C.idx  misc.c.26CBDEE45D144C77.idx  misc.h.6D1116F6E8B56EDF.idx  ripemd160.c.9AA18AF9B57816A5.idx  ripemd160.h.D4DE4C8DC7F2AD86.idx  sha1.c.967350D982CC7545.idx  sha1.h.4658267B1611A742.idx  sha256.c.A8D7BDA0A30E27E9.idx  sha256.h.98FE90174149CF7B.idx  test-base32-64.c.04B278990B91D9E6.idx  test-base58.c.00E4ECF779925474.idx  test-hmac.c.6CEDDC6A2B70B31C.idx  test-ripemd.c.0A900EA09A09A057.idx  test-sha.c.95007F4AD6E184BD.idx
cmake/: compiler-flags.cmake
driver/: base64-decode.c
src/: CMakeLists.txt  base32.c  base32.h  base58.c  base58.h  base64.c  base64.h  hmac.c  hmac.h  misc.c  misc.h  ripemd160.h  sha1.c  sha1.h  sha256.c  sha256.h
src/libmycrypto/: CMakeLists.txt  sha1.c
src/mycrypto/: CMakeLists.txt  base32.c  base32.h  base58.c  base58.h  base64.c  base64.h  hmac.c  hmac.h  misc.c  misc.h  misc.hpp  ripemd160.c  ripemd160.h  sha1.c  sha1.h  sha256.c  sha256.h
test/: CMakeLists.txt  Makefile  sha256-test.cpp  sha256-test.out
test/base/: Makefile  test-base32-64.c  test-base32-64.cpp  test-base32.cpp  test-base58.c  test-base58.cpp  test-base64.cpp
test/hmac/: Makefile  README.md  hmac-test.out  test-hmac.c  test-hmac.cpp
test/ripemd/: Makefile  README.md  test-ripemd.c
test/sha/: Makefile  test-sha.c  test-sha.cpp
test/sha1/: Makefile  a.out  sha1-test.cpp  sha1-test.out
test/sha256/: Makefile  sha256-test.cpp  sha256-test.out
tests/: CMakeLists.txt
tests/afl++/: fuzz-base.c  fuzz-base32.c  fuzz.c
tests/afl++/inputs/: 01.txt  02.case  04.case  05.case
tests/base/: Makefile  README.md  test-base32-64.c  test-base32-64.cpp  test-base58.c  test-base58.cpp
tests/hmac/: Makefile  README.md  test-hmac.c  test-hmac.cpp
tests/ripemd/: Makefile  README.md  test-ripemd.c
tests/sha/: Makefile  README.md  test-sha.c  test.output
tools/: CMakeLists.txt  base64-decode.c  base64-encode.c
utils/: Makefile
